k8s/sos-backend-hl-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sos-backend-hl-svc
spec: 
  clusterIP: None
  selector:   
    app: sos-backend
