k8s/deploy-prod.yaml
##################################################################################################
#  Sos Backend Satefulset
#  Maximum 2 Replicas
##################################################################################################
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: sos-backend-prod 
  labels:   
    app: sos-backend-prod
spec: 
  serviceName: "sos-backend-prod-svc"
  replicas: 2
  selector:
    matchLabels:     
      app: sos-backend-prod 
  template:   
    metadata:     
      labels:       
        app: sos-backend-prod
    spec:
      securityContext:
        runAsUser: 0
      volumes:       
        - name: config-volume
          configMap:         
            name: sos-backend-prod-config
        - name: sos-backend-data-volume
          persistentVolumeClaim:
            claimName: sos-backend-prod-pvc
      containers:     
        - name: sos-backend-prod      
          image: ghcr.io/sos-hub-vn/sos-backend:dev-latest
          imagePullPolicy: Always
          ports:       
            - containerPort: 8080
          resources:
            limits:
              cpu: 800m
              memory: 500Mi
            requests:
              cpu: 400m
              memory: 400Mi
          volumeMounts:
            - name: config-volume         
              mountPath: /usr/local/sos/config
            - name: sos-backend-data-volume         
              mountPath: /usr/local/sos/data
          securityContext:
            privileged: true
            runAsUser: 0
          command:
            - "ash"
          args:  ["config/run-sos-backend.sh","$(POD_NAME)"]
      imagePullSecrets:
        - name: gitcred

---
##################################################################################################
#  Sos-backend Load Balancer Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sos-backend-prod-svc
spec:
  selector:
    app: sos-backend-prod
  ports:
    - name: sos-backend-prod-svc-8080-8080
      port: 8080
      protocol: TCP
      nodePort: 30003
  type: NodePort
---
##################################################################################################
#  ES Ingress
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sos-backend-prod-svc
                port:
                  number: 8080
